tests/requests/invalid/chunked_14.py
from gunicorn.http.errors import InvalidChunkExtension
request = InvalidChunkExtension
